--- a/RabbitMq.ExcelCreate/Views/Shared/_Layout.cshtml
+++ b/RabbitMq.ExcelCreate/Views/Shared/_Layout.cshtml
@@ -56,9 +56,31 @@
             &copy; 2023 - RabbitMq.ExcelCreate - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+    <script>
+        https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/7.0.9/signalr.min.js
+    </script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
+    <script>
+        $(document).ready(function(){
+            var connection = new signalR.HubConnectionBuilder().withUrl("/MyHub").build();
+            start();
+            function start(){
+                connection.start().then().catch((err)=>{
+                    console.log(err);
+                    setTimeout(()=>start(),200);
+                })
+
+            }
+
+            connection.on("CompletedFile",()=>{
+                console.log("excel olustruma bitti");
+            })
+        })
+    </script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
